scrollbar in hover fixed

--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ span {
     height: 100%;
 }
 
-#sidebar_menu i:hover {
+#sidebar_menu i:hover:not(#profile_icon) {
     color: white;
     transform: scale(1.1);
     transition-duration: .4s;
